feat: 稼働するように修正
